@startuml
skinparam classAttributeIconSize 0
title Class Diagram Kalkulator Bangun Datar

package tugas_2407028 {

abstract class BangunDatar {
    # tampilInfo(nama : String) : void
    + luas() : double
    + keliling() : double
}

class Persegi {
    - sisi : double
    + Persegi(sisi : double)
    + luas() : double
    + keliling() : double
}

class PersegiPanjang {
    - panjang : double
    - lebar : double
    + PersegiPanjang(panjang : double, lebar : double)
    + luas() : double
    + keliling() : double
}

class Segitiga {
    - alas : double
    - tinggi : double
    - s1 : double
    - s2 : double
    - s3 : double
    + Segitiga(alas : double, tinggi : double, s1 : double, s2 : double, s3 : double)
    + luas() : double
    + keliling() : double
}

class Lingkaran {
    - jariJari : double
    + Lingkaran(jariJari : double)
    + luas() : double
    + keliling() : double
}

class tugas1_2407028 {
    + main(args : String[]) : void
}

BangunDatar <|-- Persegi
BangunDatar <|-- PersegiPanjang
BangunDatar <|-- Segitiga
BangunDatar <|-- Lingkaran

tugas1_2407028 --> BangunDatar : uses

}

@enduml